# tako

./: .gitignore  Cargo.toml  Dockerfile  README.md  development.yml  docker-compose.dev.yml  docker-compose.yml
db/: init.sqlite.sql
migrations/: 20240704_init.sql
src/: adapters.rs  clients.rs  lib.rs  main.rs  mod.rs  ports.rs
src/clients/: api.rs  mod.rs  wasm_app.rs
src/core/: adapters.rs  mod.rs  oswald.rs  ports.rs  tasks.rs
src/router/: mod.rs  tasks.rs
