[package]
name = "tako"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros"] }
futures = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.121"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.2", features = ["rt", "macros", "full", "rt-multi-thread"] }
